add auto select event and pass to Maiin Tab view when event is only 1

--- a/OPass/Base.lproj/LaunchScreen.storyboard
+++ b/OPass/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.59" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.45"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,10 +24,10 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="roj-JR-9r3" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="1M6-IO-gEu"/>
                             <constraint firstItem="roj-JR-9r3" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="GJZ-Nn-vUt"/>
                             <constraint firstItem="roj-JR-9r3" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="HM1-R0-gDf"/>
                             <constraint firstItem="roj-JR-9r3" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="IJ3-C8-g28"/>
-                            <constraint firstItem="roj-JR-9r3" firstAttribute="centerX" secondItem="n3f-kt-vLN" secondAttribute="centerX" id="wJK-mc-VrW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="n3f-kt-vLN"/>
                     </view>
